argocd-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-svc-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
