kibana-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: kibana.elastic-stack.svc.cluster.local
  ports:
    - name: http
      port: 5601
      targetPort: 5601
