ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Specify the IngressClass here
  rules:
    # Statuspage Subdomain
    - host: status-page.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

    # Kibana Subdomain
    - host: kibana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc-bridge
                port:
                  number: 5601

    # Grafana Subdomain
    - host: grafana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc-bridge
                port:
                  number: 80

    - host: argocd.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-svc-bridge
                port:
                  number: 443
